app/stylesheets/main.scss
@import '~stylekit';

body,
html {
  font-family: var(--sn-stylekit-sans-serif-font);
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  font-size: var(--sn-stylekit-base-font-size);
  background-color: transparent;
}

* {
  // To prevent gray flash when focusing input on mobile Safari
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.sn-component {
  display: flex;
  flex-direction: column;
  height: 100vh;

  .sk-panel-content {
    height: inherit !important;
  }
}

#header {
  border-bottom: 1px solid var(--sn-stylekit-border-color);
  background-color: var(--sn-stylekit-background-color);
  color: var(--sn-stylekit-foreground-color);

  min-height: 26px;
  padding: 10px;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

#header.hidden {
  display: none;
}

#content {
  background-color: var(--sn-stylekit-contrast-background-color);
  flex: 1;
  padding: 0 10px;
}

.auth-dialog {
  width: 450px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 200;
}

.auth-overlay {
  position: fixed !important;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 100;
}

.auth-list {
  display: flex;
  flex-direction: column;
}

.auth-edit {
  margin: 10px 0;
}

.sk-notification {
  // Hacking sk-notification style
  overflow: visible !important; // We need this for the dropdown menu
  margin: 10px 0 0 0 !important;
  padding: 28px 14px 28px 28px !important;
}

.auth-notes-row {
  .auth-notes {
    font-size: var(--sn-stylekit-base-font-size);
    font-style: italic;
    overflow: hidden;
  }
}

// Copy token notification
.auth-copy-notification {
  position: fixed;
  left: 50%;
  bottom: 20px;
  transform: translateX(-50%);
  z-index: 200;

  .sk-panel {
    border-radius: 4px;
    padding: 4px;
  }

  &.visible {
    visibility: visible;
    opacity: 1;
    transition: opacity 200ms ease-in;
  }

  &.hidden {
    visibility: hidden;
    opacity: 0;
    transition: visibility 0s 500ms, opacity 500ms ease-out;
  }
}


/* entry default styles */
.auth-entry {
  display: flex;
  align-items: center;

  // Collapse on mobile
  @media screen and (max-width: 480px) {
    .auth-details {
      flex-direction: column !important;
      align-items: flex-start !important;
    }
  }

  .auth-details {
    margin-bottom: 8px;
    flex: 1;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    min-width: 0;

    .auth-info {
      margin: 4px 0;
      min-width: inherit;

      .auth-service {
        font-size: var(--sn-stylekit-font-size-h1);
        font-weight: bold;
        line-height: 1.9rem;
      }

      .auth-account {
        line-height: 1.5rem;
        font-size: var(--sn-stylekit-font-size-p);
        text-align: left;
        font-weight: normal;
        word-wrap: break-word;
      }
    }

    .auth-token-info {
      display: flex;
      align-items: center;
      padding-right: 12px;

      .auth-token {
        font-size: 2rem;
        align-self: center;
        font-weight: bold;
        color: var(--sn-stylekit-info-color);
        display: flex;
        justify-content: space-between;
        width: 8.2rem;
        cursor: pointer;
      }

      .auth-countdown {
        padding: 0 12px;

        // Countdown animation
        #countdown {
          transform: rotateY(-180deg) rotateZ(-90deg);
          height: 1.8rem;
          width: 1.8rem;
          align-self: center;

          circle {
            stroke-dasharray: 113px;
            stroke-dashoffset: 0px;
            stroke-width: 4px;
            stroke: var(--sn-stylekit-success-color);
            fill: none;
            animation: countdown 10s linear infinite forwards;
          }
        }
      }
    }
  }

  .auth-options {
    color: var(--sn-stylekit-contrast-foreground-color);
    overflow: visible;
    margin-bottom: 8px;
    align-self: flex-start;

    .sk-menu-panel {
      position: absolute;
      right: 0;
      z-index: 200;
    }
  }
}

/* spinner */
.countdown-pie {
  position: relative;
  width: 24px;
  height: 24px;
  background: var(--sn-stylekit-background-color);
}

.countdown-pie,
.countdown-pie * {
  box-sizing: border-box;
}

.countdown-pie .pie {
  width: 50%;
  height: 100%;
  transform-origin: 100% 50%;
  position: absolute !important;
  background: var(--sn-stylekit-info-color);
}

.countdown-pie .spinner {
  border-radius: 100% 0 0 100% / 50% 0 0 50%;
  z-index: 20;
  border-right: none;
  // Injected in CountdownPie.js
  // animation: rota 30s linear infinite;
}

.countdown-pie .background {
  border-radius: 50%;
  width: 100%;
  z-index: 40;
  color: var(--sn-stylekit-info-color);
  opacity: 0.4;
}

.countdown-pie .filler {
  border-radius: 0 100% 100% 0 / 0 50% 50% 0;
  left: 50%;
  opacity: 0;
  z-index: 10;
  // Injected in CountdownPie.js
  // animation: opa 30s steps(1, end) infinite reverse;
  border-left: none;
}

.countdown-pie .mask {
  width: 50%;
  height: 100%;
  position: absolute;
  background: inherit;
  opacity: 1;
  z-index: 30;
  // Injected in CountdownPie.js
  // animation: opa 30s steps(1, end) infinite;
}

.color-picker-swatch {
  padding: 5px;
  background: var(--sn-stylekit-background-color);
  border-radius: 1px;
  box-shadow: 0 0 0 1px rgba(0,0,0,.1);
  display: inline-block;
  cursor: pointer;
}

.color-picker-popover {
  position: absolute;
  z-index: 200;
  right: 35px;
  top: 125px;
}

.color-picker-cover {
  position: fixed;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
}

.align-items-center {
  align-items: center;
}

.sk-base-custom {
  color: var(--sn-stylekit-foreground-color);
  position: relative;
  background-color: var(--sn-stylekit-background-color);
  overflow: hidden;
  border-radius: var(--sn-stylekit-general-border-radius);
  border-color: var(--sn-stylekit-border-color);
  border: 1px solid var(--sn-stylekit-border-color);
}

// Injected in CountdownPie.js
// @keyframes rota {
//   0% {
//     transform: rotate(0deg);
//   }

//   100% {
//     transform: rotate(360deg);
//   }
// }

// Injected in CountdownPie.js
// @keyframes opa {
//   0% {
//     opacity: 1;
//   }

//   50%,
//   100% {
//     opacity: 0;
//   }
// }

